tests/NormalTests/paczka1/fuzzy1/95941750.err
Error in line 6: GpBuH A987 54,0
Error in line 2: S658 S658 44,4
Error in line 14: GpBuH A352 47,3
Error in line 9: g8V4v S658 85,8
Error in line 26: S658 A987 44,4
